--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://8.136.80.47:3307/car?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=VwOo)+tFC8wM
+
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
